fix usertype overflow

--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@ font-family: 'Montserrat', sans-serif; */
   display: inline-block;
   width: 50px;
   height: 30px;
+  overflow: hidden;
   margin: 0 5px 5px 0;
   color: #343165;
   border: 1px solid #343165;
